--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=/Users/AlejandroSanchez/Library/Application Support/NetBeans/8.0.2/tomcat80.properties
+deploy.ant.properties.file=/Users/juanjocampuzano/Library/Application Support/NetBeans/8.0.2/tomcat80.properties
 j2ee.server.domain=/Users/juanjocampuzano/Library/Application Support/NetBeans/8.0.2/apache-tomcat-8.0.15.0_base
-j2ee.server.home=/Development/apache-tomcat-8.0.21
-j2ee.server.instance=tomcat80:home=/Development/apache-tomcat-8.0.21
+j2ee.server.home=/Applications/NetBeans/apache-tomcat-8.0.15
+j2ee.server.instance=tomcat80:home=/Applications/NetBeans/apache-tomcat-8.0.15:base=apache-tomcat-8.0.15.0_base
 user.properties.file=/Users/AlejandroSanchez/Library/Application Support/NetBeans/8.0.2/build.properties
