--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,10 @@
-deploy.ant.properties.file=/Users/juanjocampuzano/Library/Application Support/NetBeans/8.0.2/tomcat80.properties
-j2ee.server.domain=/Users/juanjocampuzano/Library/Application Support/NetBeans/8.0.2/apache-tomcat-8.0.15.0_base
-j2ee.server.home=/Applications/NetBeans/apache-tomcat-8.0.15
-j2ee.server.instance=tomcat80:home=/Applications/NetBeans/apache-tomcat-8.0.15:base=apache-tomcat-8.0.15.0_base
-user.properties.file=/Users/juanjocampuzano/Library/Application Support/NetBeans/8.0.2/build.properties
+deploy.ant.properties.file=/Users/alfredo_altamirano/Library/Application Support/NetBeans/8.0.2/tomcat80.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=/Applications/NetBeans/glassfish-4.1/glassfish/domains/domain1
+j2ee.server.home=/Users/alfredo_altamirano/apache-tomcat-8.0.21
+j2ee.server.instance=tomcat80:home=/Users/alfredo_altamirano/apache-tomcat-8.0.21
+j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=SL[/Browsers/webviewBrowser
+user.properties.file=/Users/alfredo_altamirano/Library/Application Support/NetBeans/8.0.2/build.properties
