--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@ tmp/
 local.properties
 .settings/
 .loadpath
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+.nb-gradle/
 
 # Eclipse Core
 .project
